# Python-restaurant

./: .env  .gitignore  README.md  docker-compose.yml  dump.rdb  kitchen.db  kitchen.db-journal
Events/: Events.py
Inventory/: InventoryServiceEntry.py  InventoryServiceLogic.py  InventoryServiceModel.py
Inventory/Repository/: InventoryRepository.py  kitchen.db
Kitchen/: KitchenServiceEntry.py  KitchenServiceLogic.py
Shared/: APIRequest.py  HTTPClientManager.py  Lifecycle.py  Logging.py  RedisService.py  config.py
Waitress/: WaitressServiceEntry.py  WaitressServiceLogic.py  WaitressServiceModel.py
inventory_service/: DockerFile  InventoryServiceEntry.py  InventoryServiceLogic.py  requirements.txt
inventory_service/Repository/: InventoryRepository.py
kitchen_commons/: README.md  __init__.py  pyproject.toml
kitchen_commons/events/: __init__.py
kitchen_commons/models/: InventoryServiceModel.py  WaitressServiceModel.py
kitchen_commons/shared/: APIRequest.py  HTTPClientManager.py  Lifecycle.py  Logging.py  RedisService.py  Settings.py  __init__.py
kitchen_service/: DockerFile  KitchenServiceEntry.py  KitchenServiceLogic.py  requirements.txt
waitress_service/: DockerFile  WaitressServiceEntry.py  WaitressServiceLogic.py  requirements.txt
